--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "zustand": "^4.3.8"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2560 react-scripts start",
-    "build": "node --max_old_space_size=2560 react-scripts build",
+    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
+    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
