--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "@mui/material": "^5.12.3",
     "@okta/okta-react": "^6.7.0",
     "@okta/okta-signin-widget": "^7.6.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "auth0-js": "^9.13.4",
     "auth0-lock": "^12.0.2",
     "axios": "^1.2.1",
@@ -30,12 +27,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
     "react-syntax-highlighter": "^15.5.0",
-    "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
-    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
+    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build --production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
