--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Point Base Oktavisor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://master.d2gxd8i08egx3.amplifyapp.com/#/",
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.11.0",
